Fix Header Avatar Overlapping Button 🐞

--- a/src/public/styles/_header.scss
+++ b/src/public/styles/_header.scss
@@ -82,6 +82,14 @@ li:hover {
   display: block;
 }
 
+.searchForm {
+  position: relative;
+}
+
+.searchButton {
+  position: absolute;
+}
+
 .magnifyBackground {
   background-color: #F8F8F8;
   width: 6.4rem;
@@ -97,7 +105,7 @@ li:hover {
 
 .searchBox {
   height: 3.2rem;
-  width: 50vw;
+  width: 40vw;
   max-width: 57rem;
   font-family: Roboto;
   border: 1px solid $component-border-dark-grey;
@@ -114,7 +122,6 @@ li:hover {
 .magnifyIcon {
   fill: #979797;
   position: relative;
-  left: 2rem;
   top: 0.6rem;
 }
 
@@ -189,7 +196,7 @@ li:hover {
 
 @media screen and (max-width: 850px) {
   .searchBar {
-    margin-left: 9rem;
+    margin-left: 1rem;
   }
 }
 
